--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>A Site to See</h1>
+<!DOCTYPE html>
+<body>
+  <h1>Foodcam</h1>
+  <div class="container">
+    <iframe src="http://10.0.0.99:8081" width=650px height=500px></iframe>
+  </div>
+</body>
+</html>
